--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -222,6 +222,12 @@ body {
   }
 }
 
+#Page
+{
+  display:block;
+  position:relative;
+  min-height:100vh;
+}
 
   /* Login Form  */
 .login {
